# pr-sbot

./: .env.example  main.py  pyproject.toml
.github/workflows/: pylint.yml
