[project]
name = "pr-slackbot"
version = "0.1.0"
description = "Slack bot for PR approvals"
requires-python = ">=3.10"

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "slack-bolt>=1.18",
  "slack-sdk>=3.27",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "pyjwt>=2.8",
  "cryptography>=42.0",
  "aiohttp>=3.13.2",
]
